<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/purple_700"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/ic_logo" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignEnd="@id/iv_profile_image"
                    android:layout_alignRight="@id/iv_profile_image"
                    android:layout_marginTop="-10dp"
                    android:layout_marginRight="-20dp"
                    android:src="@drawable/ic_edit"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter_bold"
                android:text="Carson"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/inter_regular"
                android:text="carson@mobility.com"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/my_orders"
            android:textAllCaps="true"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvPromocode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="PromoCode"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/change_password"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnCompAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/comp_acounts"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnChangLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/chnage_lang"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/support"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/locgout"
            android:textSize="@dimen/_15sdp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

    </LinearLayout>
</layout>