<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="order"
            type="com.amanahdelivery.models.ModelStoreOrders.Result" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        app:contentPadding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/order_id"/>

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:text="@{order.order_id}"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/customer_name"/>

                <TextView
                    android:id="@+id/custName"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/store_name"/>

                <TextView
                    android:id="@+id/vendorName"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:text="@{order.shop_name}"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/store_address"/>

                <TextView
                    android:id="@+id/vendorAddress"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:text="@{order.shop_address}"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/customer_naddress"/>

                <TextView
                    android:id="@+id/custAddress"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:text="@{order.address}"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/delivery_charge"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:text="Birr 50"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/btNavigate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/white"
                android:background="@drawable/green_circular_bg"
                android:text="@string/navigate_to_map_for_updating_status"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btItemsDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                android:background="@drawable/green_circular_bg"
                android:text="@string/show_items_details"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>